--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,5 @@ ENV/
 
 # mypy
 .mypy_cache/
+notebooks/Ch05_Building_Tuning_and_Deploying_Models/lr_model.pkl
+notebooks/Ch05_Building_Tuning_and_Deploying_Models/lr_model_2.pkl
