--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,26 @@ absl-py==1.4.0
 asttokens==2.2.1
 astunparse==1.6.3
 backcall==0.2.0
+beautifulsoup4==4.12.2
+bs4==0.0.1
 cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
+click==8.1.3
+cloudpickle==2.2.1
 colorama==0.4.6
 comm==0.1.3
 contourpy==1.0.7
 cycler==0.11.0
+Cython==0.29.34
+dask==2023.3.2
 debugpy==1.6.7
 decorator==5.1.1
+dill==0.3.6
 executing==1.2.0
 flatbuffers==23.3.3
 fonttools==4.39.3
+fsspec==2023.4.0
 gast==0.4.0
 google-auth==2.17.3
 google-auth-oauthlib==1.0.0
@@ -27,24 +35,29 @@ ipykernel==6.22.0
 ipython==8.12.0
 jax==0.4.8
 jedi==0.18.2
-joblib==1.2.0
+Jinja2==2.10
+joblib==0.11
 jupyter_client==8.1.0
 jupyter_core==5.3.0
 keras==2.12.0
 kiwisolver==1.4.4
 libclang==16.0.0
+locket==1.0.0
 Markdown==3.4.3
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 ml-dtypes==0.1.0
+multiprocess==0.70.14
 nest-asyncio==1.5.6
+networkx==3.1
 numpy==1.23.5
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.1
 pandas==2.0.0
 parso==0.8.3
+partd==1.4.0
 patsy==0.5.3
 pickleshare==0.7.5
 Pillow==9.5.0
@@ -60,15 +73,18 @@ Pygments==2.15.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
+PyWavelets==1.4.1
 pywin32==306
+PyYAML==6.0
 pyzmq==25.0.2
 requests==2.28.2
 requests-oauthlib==1.3.1
 rsa==4.9
-scikit-learn==1.2.2
+scikit-learn==1.0.2
 scipy==1.10.1
 seaborn==0.12.2
 six==1.16.0
+soupsieve==2.4
 stack-data==0.6.2
 statsmodels==0.13.5
 tensorboard==2.12.1
@@ -80,6 +96,7 @@ tensorflow-intel==2.12.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.2.0
 threadpoolctl==3.1.0
+toolz==0.12.0
 tornado==6.2
 traitlets==5.9.0
 typing_extensions==4.5.0
